[gd_scene load_steps=2 format=3 uid="uid://ddi6ok76vr73l"]

[ext_resource type="Script" path="res://database_tool.gd" id="1_w103u"]

[node name="DatabaseTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w103u")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -264.0
offset_right = 396.0
offset_bottom = 264.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Database Tool"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DatabaseFile" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="DBFTitle" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer2/DatabaseFile"]
layout_mode = 2
text = "Database File"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "CSV File Path:"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LootFiles" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="LFTitle" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer3/LootFiles"]
layout_mode = 2
text = "Loot Files
"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item File Path:"

[node name="LineEdit2" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Table Path:"

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AdditionalFiles" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2

[node name="AFFTitle" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer4/AdditionalFiles"]
layout_mode = 2
text = "Additional Files
"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Prefab File Path:"

[node name="LineEdit2" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Sprite File Path:"

[node name="LineEdit3" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Audio File Path:"

[node name="LineEdit4" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Event File Path:"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ClearFilePaths" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Clear File Paths"

[node name="AutoFillPaths" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Auto-Fill Paths"

[node name="GenerateLoot" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Generate Loot"
